--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- Header section stars -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container">
         <div class="header_wrapper">
           <div class="header_left">
@@ -53,7 +53,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> -->
     <!-- Header section ends -->
     <!-- Hero section styles -->
     <section class="hero" id="hero">
